10.0.0-beta-3:
	CHANGE: Rework Poor Ore worldgen. Replace with Mines, branching clouds of ore containing both Poor Ore and Standard Ore.
	CHANGE: Standardize Item and Texture names, may affect addons and resource packs, worlds should unaffected.
	CONFIG: Added config option to reduce/eliminate vanilla Gold/Iron Ore generation.
	FIX: Fix Geode generation.
	FIX: Various other fixes.

10.0.0-beta-2:
	FIX: Fix various crash bugs and incompatibilities.

10.0.0-beta-1
	INFO: Minecraft 1.10.2 update. Not feature complete.

9.12.2.1
	NEW: Added Trackman's Notepad, a tool for copying settings from one block to another. (contribution by Forecaster)
	INFO: Notepad currently only supports Item and Fluid Loaders/Unloaders.

9.12.2.0:
	FIX: The RF Unloader should now push RF to surrounding blocks instead of hoarding it for itself. (issue #821)

9.12.1.0:
	FIX: Crash when creating EnergyCart. (issue #820)
	FIX: Rebalance Enchantment weights. (issue #819)

9.12.0.0:
	NEW: Added Perpetuum Locomotive, a Creative only Locomotive that doesn't require fuel of any kind. (contribution by Forecaster)
	FIX: Wrestle missing RF Unloader textures from the maws of Git, the beast.

9.11.0.0:
	NEW: Added Redstone Flux Cart + Loaders.
	NEW: Fancy tooltips for the Signal blocks/boxes.
	NEW: Added some new Admin commands for killing entities/carts.
	NEW: You can now label Block Signals in addition to Boxes.
	FIX: Fix right-click handling for fluid containers. (issue #776)
	FIX: Fix NPE when looking at Signal Boxes. (issue #793)
	FIX: Fixed excessive render refreshes when a Switch Controller touched two Switch Tracks. (issue #775)
	FIX: Hobbyist Engine should move empty buckets to the fluid output slot. (issue #804)
	

9.10.0.0:
    INFO: Repackage for release.

9.9.0.1:
	NEW: Added Auto-Coupler Mode to Coupler Track. Any cart that passes over this track will couple to the next cart it collides with. (contribution by Cream-tea)
	NEW: Add support for IC2 Classic. (contribution by Speiger)