@@ -13,8 +13,11 @@ import net.minecraft.block.state.IBlockState;
 import net.minecraft.entity.ai.EntityAIAttackMelee;
 import net.minecraft.entity.ai.EntityAIAttackRanged;
 import net.minecraft.entity.boss.EntityWither;
+import net.minecraft.entity.effect.EntityLightningBolt;
 import net.minecraft.entity.monster.*;
 import net.minecraft.entity.passive.EntityBat;
+import net.minecraft.entity.passive.EntityHorse;
+import net.minecraft.entity.passive.HorseType;
 import net.minecraft.init.Blocks;
 import net.minecraft.init.Items;
 import net.minecraft.inventory.EntityEquipmentSlot;
@@ -52,6 +55,30 @@ public class EntityCartPumpkin extends CartBaseSurprise {
 
             skeleton.setItemStackToSlot(EntityEquipmentSlot.HEAD, new ItemStack(rand.nextFloat() < 0.25F ? Blocks.LIT_PUMPKIN : Blocks.PUMPKIN));
         }));
+
+        MOBS.add(SurpriseEntity.create(EntityHorse.class, 10, 1,
+                (cart, horse) -> {
+                    horse.setType(HorseType.SKELETON);
+                    horse.setGrowingAge(0);
+                    horse.tasks.addTask(1, new EntityAIHalloweenKnights(horse));
+                },
+                (cart, horse) -> cart.worldObj.addWeatherEffect(new EntityLightningBolt(horse.worldObj, horse.posX, horse.posY, horse.posZ, true))
+        ));
+
+        MOBS.add(SurpriseEntity.create(EntityHorse.class, 20, 1,
+                (cart, horse) -> {
+                    horse.setType(HorseType.ZOMBIE);
+                    horse.setGrowingAge(0);
+                }
+        ));
+
+//        if (ModuleWorld.villagerTrackman != null) {
+//            MOBS.add(SurpriseEntity.create(EntityZombie.class, 200, 1,
+//                    (cart, villager) -> {
+//                        villager.setVillagerType(ModuleWorld.villagerTrackman);
+//                    }
+//            ));
+//        }
     }
 
     public EntityCartPumpkin(World world) {
